--- a/index.html
+++ b/index.html
@@ -11,11 +11,11 @@
 
 <body>
    
-    <img class="logo1" src="../../assets/Logo.Cambio.jpeg" alt="logo-money-cambio">
+    <img class="logo1" src="./assets/Logo.Cambio.jpeg" alt="logo-money-cambio">
 
 
     <main>
-        <img class="logo2" src="../../assets/logo-1.gif" alt="logo-money">
+        <img class="logo2" src="./assets/logo-1.gif" alt="logo-money">
         <label>
             Converter <b>de:</b>
             <select id="convert-select" class="select">
@@ -46,15 +46,15 @@
         <section id="results-box">
 
             <div class="flags">
-                <img class="currency-img1" src="../../assets/real.png" alt="real" id="flag1">
+                <img class="currency-img1" src="./assets/real.png" alt="real" id="flag1">
                 <p id="p1">Real</p>
                 <p id="valor1">R$ 0,00</p>
             </div>
 
-            <img class="arrow-img" src="../../assets/arrow.png" alt="seta">
+            <img class="arrow-img" src="./assets/arrow.png" alt="seta">
 
             <div class="flags">
-                <img class="currency-img" src="../../assets/dolar.png" alt="logo-moeda-a-convertida">
+                <img class="currency-img" src="./assets/dolar.png" alt="logo-moeda-a-convertida">
                 <p id="p2">Dólar</p>
                 <p id="valor2">$ 0,00</p>
             </div>
