erro de img corregido

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
             <img class="arrow-img" src="./assets/arrow.png" alt="seta">
 
             <div class="flags">
-                <img class="currency-img" src="./assets/dolar.png" alt="logo-moeda-a-convertida">
+                <img class="currency-img" src="./assets/dolar.png" alt="logo-moeda-a-convertida" id="flag2">
                 <p id="p2">Dólar</p>
                 <p id="valor2">$ 0,00</p>
             </div>
